--- a/README
+++ b/README
@@ -2,6 +2,7 @@ dwm - dynamic window manager
 ============================
 dwm is an extremely fast, small, and dynamic window manager for X.
 
+Just retarded Clone, not even a fork
 
 Requirements
 ------------
